--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="dz-2a.js"></script>
+<script src="dz4.js"></script>
 <h1>HELLO</h1>
 </body>
 </html>
