--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-<script src="dz4.js"></script>
+
+<div id="animal">
+    <ul>
+        <li></li>
+    </ul>
+   <p>Привет</p>
+    <p class="dogs">cat</p>
+    <p class="cats">cat</p>
+    <p class="birds">bird</p>
+</div>
+<div class="test">
+
+
+</div>
 <h1>HELLO</h1>
+<script src="work6.js"></script>
 </body>
 </html>
