--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+<!--    <link rel="stylesheet" type="text/css" href="reset.css">-->
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-<div id="animal">
-    <ul>
-        <li></li>
-    </ul>
-   <p>Привет</p>
-    <p class="dogs">cat</p>
-    <p class="cats">cat</p>
-    <p class="birds">bird</p>
-</div>
-<div class="test">
-
-
-</div>
 <h1>HELLO</h1>
-<script src="work6.js"></script>
+<form><input id="click" type="button" value="Добавить" onclick="clickButton()">
+</form>
+<div class="table">
+    <ul class="ulTable">
+        <li>firstName</li>
+        <li>lastName</li>
+        <li>age</li>
+    </ul>
+
+</div>
+<script src="dz6.js"></script>
 </body>
 </html>
